# stock-dashboard-sc

./: .gitignore  aider_prompt_permission_fix.txt  aider_prompt_selPic_v2.txt  aider_prompt_selPic_v3.txt  aider_prompt_selPic_v4.txt  aider_prompt_selection_pic.txt  copy_pbxproj.pbxproj  generate_pbxproj.py  index-CXBWcG_F.js  index-Cg4J4bRh.js  index.html  test_pbxproj.pbxproj  확인.py
ad_login_log/: AD로그인로그자동화.spec  IP분류도구.spec  _new_write_sheet.py  app.py  build.bat  build_exe.bat  create_samples.py  gen_samples.py  gen_xls_sample.py  sample1.xlsx  sample2.xlsx  sample3.xlsx  samples_1.xls  samples_1.xlsx  start.bat  test_cumulative.xlsx  test_gen.py  test_input.xlsx
assets/: index-BAZa2r7R.css  index-BG7m-bZD.js  index-Bpo7ypHd.js  index-Bsi9aHGB.js  index-C6qKtVzH.js  index-CrA-twJQ.css  index-D6rJ1vp7.css  index-DPew2JsU.css  index-yFy49a-U.js
ip_classifier/: IP분류도구.spec  app.py  final_test.py  samples_1_classified.xlsx  samples_2.xlsx
ip_classifier_windows/: IP부여_20260524.xlsx  README.txt  app.py  requirements-win.txt  samples_2_classified.xlsx  samples_3.xlsx  samples_3_classified.xlsx  test_runner.py
stock-dashboard/: .gitignore  dashboard_data.json  data_fetcher.py  deploy-gh-pages.py  index.html  package-lock.json  package.json  proxy-server.js  server.js  test-direct-fetch.js  test-yahoo.js  (+3 more)
youtube/: YouTube Downloader.spec  build_spec.py  pyproject.toml  run_youtube_downloader.sh  youtube_downloader.py
youtube/youtube_downloader/: __init__.py  __main__.py  gui.py
youtube/youtube_downloader.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+35 files in other folders)
